2007-10-09  Martin Hunt  <hunt@redhat.com>

	* rt_signal.c: Fix expected results for IA64.

2007-10-09  Martin Hunt  <hunt@redhat.com>

	* rt_signal.c: Fix expected patterns to match
	recent changes in tapsets. 

	* signal.c: Use syscall(). Fix expected patterns.

2007-10-01  Martin Hunt  <hunt@redhat.com>

	* test.tcl (run_one_test): Append newlines when
	using send_log().

2007-09-25  Martin Hunt  <hunt@redhat.com>

	* test.tcl (run_one_test): Fix unsupported results.
	Send failure diffs to log.

2007-09-24  Martin Hunt  <hunt@redhat.com>

	* link.c (main): Don't check result code.

2007-09-19  Martin Hunt  <hunt@redhat.com>
	PR 4931
	* test-debug.tcl (cleanup): Remove print.
	* README: Update.
	* syscall.exp: Source test.tcl and call run_one_test()
	from there.
	* test.tcl: Rewrite as a function. Do compilation
	as well as testing. Compile into and execute in
	a directory in /tmp.
	
2007-09-17  Martin Hunt  <hunt@redhat.com>

	* timer.c (main): Remove the return value checks.

2007-08-22  Martin Hunt  <hunt@redhat.com>

	* futimes.c (main): Add utimensat tests.

2007-08-16  Martin Hunt  <hunt@redhat.com>

	* all_syscalls.stp: New file.  Useful for debugging.

2007-07-31  Martin Hunt  <hunt@redhat.com>

	* clock.c (main): Change flags to hex.

2007-07-30 David Wilder <dwilder@us.ibm.com>

	* readdwrite.c: Added pwrite and pread test

2007-07-17  Martin Hunt  <hunt@redhat.com>

	* poll.c (main): Don't hardcode fd.

2007-07-16  Martin Hunt  <hunt@redhat.com>

	* select.c (main): Ifdef SYS_pselect6.
	* poll.c (main): Ifdef SYS_ppoll.

2007-07-16  Martin Hunt  <hunt@redhat.com>
	
	* select.c, poll.c: New.

2007-07-10  Martin Hunt  <hunt@redhat.com>

	* futimes.c (main): Ifdef out futimesat tests
	if not defined.

	* uid16.c (main): 16-bit syscalls now have
	the same name as 32-bit. Fix patterns.

2007-07-03  Martin Hunt  <hunt@redhat.com>

	* futimes.c: New test.

2007-06-21  Martin Hunt  <hunt@redhat.com>

	* chmod.c, dir.c, mmap.c, net1.c, readwrite.c, stat.c,